--- a/index.html
+++ b/index.html
@@ -5,66 +5,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Signal Alerts — Bet Point</title>
 
+<!-- PWA -->
 <link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#007bff">
+
+<!-- iOS Icon -->
 <link rel="apple-touch-icon" href="./icon-1024x1024.png">
 
+<!-- OneSignal SDK -->
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 
 <style>
 html, body {
-  margin:0;
-  height:100%;
-  width:100%;
-  font-family:Arial,sans-serif;
-  background:#000;
+  margin:0; height:100%; width:100%; font-family:Arial,sans-serif; background:#000;
 }
-iframe {
-  width:100%;
-  height:100%;
-  border:none;
-  display:block;
-}
+iframe { width:100%; height:100%; border:none; display:block; }
 #loginOverlay {
-  position:fixed;
-  inset:0;
-  background:#000;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  z-index:999;
-  color:#fff;
+  position:fixed; inset:0; background:#000;
+  display:flex; flex-direction:column; justify-content:center; align-items:center;
+  z-index:999; color:#fff;
 }
-#loginOverlay img {
-  width:96px;
-  height:96px;
-  margin-bottom:16px;
-}
+#loginOverlay img { width:96px; height:96px; margin-bottom:16px; }
 #loginOverlay input {
-  padding:12px;
-  font-size:16px;
-  width:220px;
-  border-radius:6px;
-  border:none;
-  margin-bottom:12px;
+  padding:12px; font-size:16px; width:220px; border-radius:6px; border:none; margin-bottom:12px;
 }
 #loginOverlay button {
-  padding:12px 18px;
-  font-size:16px;
-  border-radius:6px;
-  border:none;
-  background:#007bff;
-  color:#fff;
-  cursor:pointer;
+  padding:12px 18px; font-size:16px; border-radius:6px; border:none; background:#007bff; color:#fff; cursor:pointer;
 }
-#loginError {
-  color:#ff4d4d;
-  margin-top:12px;
-}
+#loginError { color:#ff4d4d; margin-top:12px; }
 </style>
 </head>
-
 <body>
 
 <!-- LOGIN -->
@@ -80,110 +50,109 @@ iframe {
 <iframe id="appFrame"></iframe>
 
 <script>
-/* ================= CONFIG ================= */
-const APP_URL = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
-const CHECK_LAST4 = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4";
-const POLL_MS = 15000; // 15 seconds
-const ONESIGNAL_APP_ID = "2b94ad70-2518-44d4-aaef-bfb95739206f";
+/* CONFIG */
+const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
+const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
+const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
+const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
 
-let pollTimer = null;
+let rowId = null;
+let linkId = null;
 
-/* ================= LOGIN ================= */
+/* AUTO LOGIN */
+window.addEventListener('DOMContentLoaded', () => {
+  const savedRow = localStorage.getItem('rowId');
+  const savedLink = localStorage.getItem('linkId');
+  if (savedRow && savedLink) {
+    rowId = savedRow;
+    linkId = savedLink;
+    unlockApp();
+    initOneSignal();
+  }
+});
+
+/* LOGIN FUNCTION */
 async function submitRowId() {
-  const error = document.getElementById("loginError");
-  const rowIdInput = document.getElementById("rowIdInput").value.trim();
-  if (!rowIdInput) return;
+  const error = document.getElementById('loginError');
+  rowId = document.getElementById('rowIdInput').value.trim();
+  if (!rowId) return;
+  error.textContent = '';
 
-  localStorage.setItem("rowId", rowIdInput);
-  unlockApp();
-  initOneSignal(rowIdInput);
-  startPolling();
+  try {
+    const res = await fetch(VERIFY_URL, {
+      method:'POST',
+      headers:{ 'Content-Type':'application/json' },
+      body: JSON.stringify({ row_id: rowId })
+    });
+    const data = await res.json();
+    if (!data.valid) {
+      error.textContent = 'Invalid password';
+      return;
+    }
+    linkId = data.link_id;
+    localStorage.setItem('rowId', rowId);
+    localStorage.setItem('linkId', linkId);
+    unlockApp();
+    initOneSignal();
+  } catch {
+    error.textContent = 'Server error';
+  }
 }
 
-/* ================= UI ================= */
+/* UNLOCK APP */
 function unlockApp() {
-  document.getElementById("loginOverlay").style.display = "none";
-  const frame = document.getElementById("appFrame");
+  document.getElementById('loginOverlay').style.display = 'none';
+  const frame = document.getElementById('appFrame');
   if (!frame.src) frame.src = APP_URL;
 }
 
-function forceLogout(reason) {
-  console.warn("⛔ KICKED:", reason);
-  localStorage.removeItem("rowId");
-
-  if (pollTimer) clearInterval(pollTimer);
-  pollTimer = null;
-
-  document.getElementById("appFrame").src = "";
-  document.getElementById("loginOverlay").style.display = "flex";
-}
-
-/* ================= ONESIGNAL ================= */
-function initOneSignal(rowId) {
+/* ONESIGNAL INIT WITH BELL HOOK */
+function initOneSignal() {
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(async function(OneSignal) {
     await OneSignal.init({
-      appId: ONESIGNAL_APP_ID,
-      notifyButton: { enable: true }
+      appId:"2b94ad70-2518-44d4-aaef-bfb95739206f",
+      path:"/signals/",
+      serviceWorkerPath:"signals/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath:"signals/OneSignalSDKUpdaterWorker.js",
+      notifyButton:{ enable:true } // bell visible
     });
 
-    // Set external_id if already subscribed
-    const subscription = await OneSignal.User.getSubscription();
-    if (subscription?.userId) {
-      await OneSignal.User.setExternalUserId(rowId);
-      console.log("OneSignal external_id set for existing subscription:", rowId);
-    }
+    // Listen for subscription changes
+    OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
+      if (!event.current?.optedIn) return;
 
-    // Listen for new subscription (user clicks bell)
-    OneSignal.User.pushSubscription.addEventListener(async (event) => {
-      if (event.current?.optedIn) {
-        const playerId = OneSignal.User.onesignalId;
-        await OneSignal.User.setExternalUserId(rowId);
-        console.log("User subscribed, external_id set:", rowId);
+      const rowIdLocal = localStorage.getItem("rowId");
+      const linkIdLocal = localStorage.getItem("linkId");
+      if (!rowIdLocal) return;
+
+      try {
+        // 1️⃣ Set External ID = rowId
+        await OneSignal.login(rowIdLocal);
+
+        // 2️⃣ Get OneSignal ID (playerId)
+        const playerId = await OneSignal.getUserId();
+
+        // 3️⃣ Save to Supabase users table
+        await fetch(REGISTER_URL, {
+          method:"POST",
+          headers:{ "Content-Type":"application/json" },
+          body: JSON.stringify({
+            rowId: rowIdLocal,        // matches users.row_id
+            linkId: linkIdLocal,      // optional tracking
+            one_signal_id: playerId,  // save OneSignal ID
+            device_type: deviceType   // save device type
+          })
+        });
+
+        console.log("Saved OneSignal ID for user:", rowIdLocal, playerId);
+
+      } catch(err) {
+        console.error("Error saving OneSignal ID:", err);
       }
     });
   });
 }
-
-/* ================= HARD KICK POLLING ================= */
-function startPolling() {
-  if (pollTimer) clearInterval(pollTimer);
-
-  pollTimer = setInterval(async () => {
-    const rowId = localStorage.getItem("rowId");
-    if (!rowId) return;
-
-    try {
-      const res = await fetch(CHECK_LAST4, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ row_id: rowId })
-      });
-
-      if (!res.ok) return console.error("Poll fetch error:", res.statusText);
-
-      const data = await res.json();
-
-      if (!data.valid) {
-        console.warn("Last 4 player IDs mismatch:", data.last4_player_ids);
-        forceLogout("Detected multiple devices or player_id change");
-      }
-
-    } catch (err) {
-      console.error("Polling error:", err);
-    }
-  }, POLL_MS);
-}
-
-/* ================= AUTO START ================= */
-window.addEventListener("DOMContentLoaded", () => {
-  const rowId = localStorage.getItem("rowId");
-  if (rowId) {
-    unlockApp();
-    initOneSignal(rowId);
-    startPolling();
-  }
-});
 </script>
 
 </body>
