--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@ iframe { width:100%; height:100%; border:none; display:block; }
 #loginOverlay input { padding:12px; font-size:16px; width:220px; border-radius:6px; border:none; margin-bottom:12px; }
 #loginOverlay button { padding:12px 18px; font-size:16px; border-radius:6px; border:none; background:#007bff; color:#fff; cursor:pointer; }
 #loginError { color:#ff4d4d; margin-top:12px; }
+#spinner {
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  border-top: 4px solid #007bff;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  animation: spin 1s linear infinite;
+  margin-top:12px;
+  display:none;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 </style>
 </head>
 <body>
@@ -30,6 +44,7 @@ iframe { width:100%; height:100%; border:none; display:block; }
   <input type="password" id="rowIdInput" placeholder="Password">
   <button onclick="submitRowId()">Submit</button>
   <div id="loginError"></div>
+  <div id="spinner"></div>
 </div>
 
 <!-- APP -->
@@ -48,6 +63,7 @@ const ONESIGNAL_APP_ID = "2b94ad70-2518-44d4-aaef-bfb95739206f";
 let rowId = null;
 let linkId = null;
 let pollTimer = null;
+let gracePeriod = false;
 
 /* ================= AUTO LOGIN ================= */
 window.addEventListener('DOMContentLoaded', () => {
@@ -65,9 +81,11 @@ window.addEventListener('DOMContentLoaded', () => {
 /* ================= LOGIN ================= */
 async function submitRowId() {
   const error = document.getElementById('loginError');
+  const spinner = document.getElementById('spinner');
   rowId = document.getElementById('rowIdInput').value.trim();
   if (!rowId) return;
   error.textContent = '';
+  spinner.style.display = 'block'; // show spinner
 
   try {
     const res = await fetch(VERIFY_URL, {
@@ -76,19 +94,29 @@ async function submitRowId() {
       body: JSON.stringify({ row_id: rowId })
     });
     const data = await res.json();
+
     if (!data.valid) {
       error.textContent = 'Invalid password';
+      spinner.style.display = 'none';
       return;
     }
+
     linkId = data.link_id;
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('linkId', linkId);
 
     unlockApp();
     initOneSignal(rowId);
+
+    // Grace period: prevent immediate kick
+    gracePeriod = true;
+    setTimeout(() => { gracePeriod = false; }, 4000);
+
     startPolling();
   } catch {
     error.textContent = 'Server error';
+  } finally {
+    spinner.style.display = 'none'; // hide spinner
   }
 }
 
@@ -121,7 +149,7 @@ function initOneSignal(rowId) {
       notifyButton:{ enable:true }
     });
 
-    // Automatically set external ID for this session
+    // Automatically set external ID
     try {
       await OneSignal.login(rowId); // 🔑 Sets external_id = rowId
       const playerId = await OneSignal.getUserId();
@@ -148,6 +176,8 @@ function initOneSignal(rowId) {
 function startPolling() {
   if (pollTimer) clearInterval(pollTimer);
   pollTimer = setInterval(async () => {
+    if (gracePeriod) return; // skip checking during grace period
+
     const rowIdLocal = localStorage.getItem('rowId');
     if (!rowIdLocal) return;
 
